# dde-services

./: CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  develop-guide.md
src/plugin-qt/power/session/: CMakeLists.txt  lidswitchhandler.cpp  lidswitchhandler.h  lowpowermanager.cpp  lowpowermanager.h  plugin-power-session.cpp  powermanager.cpp  powermanager.h  powersaveplan.cpp  powersaveplan.h  sessiondbusproxy.cpp  sessiondbusproxy.h  sleepinhibitor.cpp  sleepinhibitor.h
src/plugin-qt/power/session/idle/: idlewatcher.h  idlewatcher_wl.cpp  idlewatcher_wl.h  idlewatcher_x11.cpp
src/plugin-qt/power/session/misc/: org.deepin.dde.Power1.service  plugin-power-session.json
src/plugin-qt/power/session/screen/: screencontroller.cpp  screencontroller.h  screencontroller_wl.cpp  screencontroller_wl.h  screencontroller_x11.cpp
src/plugin-qt/power/session/translations/: plugin-power-session_az.ts  plugin-power-session_bo.ts  plugin-power-session_ca.ts  plugin-power-session_de.ts  plugin-power-session_en.ts  plugin-power-session_en_US.ts  plugin-power-session_es.ts  plugin-power-session_fi.ts  plugin-power-session_fr.ts  plugin-power-session_hu.ts  plugin-power-session_it.ts  plugin-power-session_ja.ts  plugin-power-session_ko.ts  plugin-power-session_nb_NO.ts  plugin-power-session_pl.ts  plugin-power-session_pt_BR.ts  plugin-power-session_ru.ts  plugin-power-session_sq.ts  plugin-power-session_uk.ts  plugin-power-session_zh_CN.ts  plugin-power-session_zh_HK.ts  plugin-power-session_zh_TW.ts
src/plugin-qt/power/system/: CMakeLists.txt  batterymanager.cpp  batterymanager.h  plugin-power-system.cpp  powermanager.cpp  powermanager.h  systemdbusproxy.cpp  systemdbusproxy.h
src/plugin-qt/power/system/misc/: org.deepin.dde.Power1.service  plugin-power-system.json
src/plugin-qt/screenscale/: CMakeLists.txt  plugin.cpp
src/plugin-qt/screenscale/impl/: screenscale.cpp  screenscale.h
src/plugin-qt/screenscale/misc/: org.deepin.dde.ScreenScale1.json  plugin-dde-screenscale.json
src/plugin-qt/screenscale/misc/dbus/: org.deepin.dde.ScreenScale1.conf  org.deepin.dde.ScreenScale1.service
src/plugin-qt/shortcut/: CMakeLists.txt  DEVELOPER_GUIDE.md  plugin-dde-shortcut.json  plugin.cpp  pluginshortcutmanager.cpp  pluginshortcutmanager.h
src/plugin-qt/shortcut/cmake/: DdeShortcutI18n.cmake
src/plugin-qt/shortcut/configs/: org.deepin.dde.keybinding.ini  org.deepin.shortcut.json
src/plugin-qt/shortcut/configs/org.deepin.dde.keybinding.gesture.swipe3down/: org.deepin.gesture.json  org.deepin.shortcut.json
src/plugin-qt/shortcut/configs/org.deepin.dde.keybinding.gesture.swipe3left/: org.deepin.gesture.json  org.deepin.shortcut.json
src/plugin-qt/shortcut/dde-app-shortcuts/: CMakeLists.txt
src/plugin-qt/shortcut/src/: main.cpp
src/plugin-qt/shortcut/tests/: CMakeLists.txt  tst_gestureactioncatalog.cpp  tst_modifierkeystate.cpp  tst_physicalkeyalias.cpp  tst_qkeysequenceconverter.cpp  tst_triggeractioncatalog.cpp
src/plugin-qt/shortcut/tools/: CMakeLists.txt  extract_shortcuts_i18n.py
src/plugin-qt/shortcut/translations/: org.deepin.dde.keybinding_ca.ts  org.deepin.dde.keybinding_de.ts  org.deepin.dde.keybinding_en.ts  org.deepin.dde.keybinding_es.ts  org.deepin.dde.keybinding_fi.ts  org.deepin.dde.keybinding_id.ts  org.deepin.dde.keybinding_ja.ts  org.deepin.dde.keybinding_pl.ts  org.deepin.dde.keybinding_pt.ts  org.deepin.dde.keybinding_pt_BR.ts  org.deepin.dde.keybinding_sq.ts  org.deepin.dde.keybinding_zh_CN.ts
src/plugin-qt/thememanager/: CMakeLists.txt  plugin-qt-thememanager.json  plugin.cpp  sunrisesunset.cpp  sunrisesunset.h  thememanager.cpp  thememanager.h  timedatedbusproxy.cpp  timedatedbusproxy.h
src/plugin-qt/wallpapercache/: CMakeLists.txt  cachedwallpaper.cpp  cachedwallpaper.h  imageeffectprocessor.cpp  imageeffectprocessor.h  plugin.cpp  scaleimagethread.cpp  scaleimagethread.h  wallpapercache.cpp  wallpapercache.h  wallpapercachemanager.cpp  wallpapercachemanager.h  wallpapercacheservice.cpp  wallpapercacheservice.h
src/plugin-qt/wallpapercache/misc/: org.deepin.dde.ImageBlur1.conf  org.deepin.dde.ImageBlur1.service  org.deepin.dde.ImageEffect1.conf  org.deepin.dde.ImageEffect1.service  org.deepin.dde.WallpaperCache.conf  org.deepin.dde.WallpaperCache.service  plugin-qt-wallpapercache.json
src/plugin-qt/wallpapercache/tests/: CMakeLists.txt  test_dbus.sh  test_wallpaper_cache.cpp
src/plugin-qt/wallpaperslideshow/: CMakeLists.txt  appearancedbusproxy.cpp  appearancedbusproxy.h  commondefine.h  org.deepin.dde.WallpaperSlideshow.xml  plugin-qt-wallpaperslideshow.json  plugin.cpp  slideshowmanager.cpp  slideshowmanager.h  utils.cpp  utils.h  wallpaperscheduler.cpp  wallpaperscheduler.h  wallpaperslideshow.cpp  wallpaperslideshow.h
src/plugin-qt/wallpaperslideshow/background/: background.cpp  background.h  backgrounds.cpp  backgrounds.h  format.cpp  format.h
src/plugin-qt/xsettings/: CMakeLists.txt  main.cpp  plugin.cpp
src/plugin-qt/xsettings/impl/: dconfinfos.cpp  dconfinfos.h  scalefactorhelper.cpp  scalefactorhelper.h  xsdatainfo.cpp  xsdatainfo.h  xsettings1.cpp  xsettings1.h  xsettingsmanager.cpp  xsettingsmanager.h
src/plugin-qt/xsettings/misc/: dde-xsettings.json  org.deepin.XSettings.json  org.deepin.dde.XSettings.service  org.deepin.dde.XSettings1.service  plugin-dde-xsettings.json
src/plugin-qt/xsettings/types/: arrayOfColor.cpp  arrayOfColor.h  scaleFactors.cpp  scaleFactors.h
src/plugin-sdbus/plugin-ipwatchd/: CMakeLists.txt  README.md  analyse.c  config.c  ipwatchd.c  ipwatchd.conf  org.deepin.ipwatchd.conf  plugin-ipwatchd.json  service.c
src/plugin-sdbus/plugin-ipwatchd/deepin-service-group@deepin-daemon.service.d/: ipwatchd-override.conf.in
src/plugin-sdbus/plugin-ipwatchd/hooks/: ipwatchd_hooks.c  ipwatchd_hooks.h  upstream-hooks.patch
src/plugin-sdbus/plugin-ipwatchd/plugin/: plugin.c  plugin_adapter.c  plugin_adapter.h  service.c  service.h
src/plugin-sdbus/plugin-ipwatchd/scripts/: ipwatchd  ipwatchd-script
src/plugin-sdbus/plugin-ipwatchd/upstream/: analyse.c  config.c  devinfo.c  ipwatchd.c
(+235 files in other folders)
